Fixed buttons being wrong color on dream details page

--- a/src/Details/DetailsIntro/DetailsIntro.css
+++ b/src/Details/DetailsIntro/DetailsIntro.css
@@ -57,7 +57,7 @@
   display: none;
 }
 
-#details.dream #details_action_buttons .noodle_button {
+#details.dream .noodle_button {
   background-color: var(--dreams-color);
 }
 
